--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -1,5 +1,6 @@
 require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelector', 'YSDForms', 'ysdtemplate', 
-         'jquery.ui', 'jquery.ui.datepicker-es', 'jquery.ui.datepicker.validation', ],
+         'jquery.ui', 'jquery.ui.datepicker-es', 'jquery.ui.datepicker.validation',
+         'jquery.formparams' ],
     function($, EntityManagement, RemoteDataSource, SelectSelector, YSDForms, tmpl) {
 
  
@@ -90,6 +91,19 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
            });
        });
 
+      var self = this;
+      $('.resource_user_name').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });
+      $('.resource_user_surname').bind('blur', function() {
+        self.updateLineResource($(this)[0]);
+      });
+      $('.customer_height').bind('change', function() {
+        self.updateLineResource($(this)[0]);
+      });
+      $('.customer_weight').bind('change', function() {
+        self.updateLineResource($(this)[0]);
+      });
 
     }
 
@@ -113,6 +127,31 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
           $('#' + $(this).attr('name')).fadeIn(); // Show content for current tab
         }
       });
+
+    }
+
+    this.updateLineResource = function(control) {
+
+       var form = $(control.form)
+       var formdata = form.formParams(true);
+       var lineIdx = form.attr('data-lineindex');
+       var resourceIdx = form.attr('data-resourceindex');
+       var booking = this.manager.model.currentEntity();
+       var json_request = JSON.stringify(formdata);
+
+       $.ajax({
+               type: 'PUT',
+               data : json_request,
+               url : '/api/booking-line-resource',
+               success: function(data, textStatus, jqXHR) {
+                 for (attribute in formdata) {
+                   booking.booking_lines[lineIdx].booking_line_resources[resourceIdx][attribute] = formdata[attribute];
+                 }
+               },
+               error: function(data, textStatus, jqXHR) {
+                 alert('Error updating resource');
+               }
+           });
 
     }
 
